[tool.poetry]
name = "pygame-testproject"
version = "0.1.0"
description = ""
authors = ["Julius Dehner <julius.dehner@gmail.com>", "Simon Helfert"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "2.0.0.dev10"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
